# community-integrations

./: CLAUDE.md  Makefile  README.md  pyproject.toml  release.sh  ruff.toml
libraries/_template/: pyproject.toml
libraries/dagster-adbc/: README.md  pyproject.toml
libraries/dagster-adbc/dagster_adbc/: __init__.py  resource.py
libraries/dagster-adbc/dagster_adbc_tests/: test_resource.py  test_version.py
libraries/dagster-apprise/: README.md  pyproject.toml
libraries/dagster-apprise/dagster_apprise/: __init__.py  components.py  hooks.py  resource.py
libraries/dagster-apprise/dagster_apprise_tests/: test_component_sensor.py  test_comprehensive_urls.py  test_edge_cases.py  test_hooks.py  test_resource.py
libraries/dagster-async/: README.md  pyproject.toml
libraries/dagster-async-executor/: Makefile  pyproject.toml
libraries/dagster-async-executor/dagster_async_executor/: __init__.py
libraries/dagster-async-executor/dagster_async_executor_tests/: test_assets.py  test_async_executor_performance.py
libraries/dagster-async/dagster_async/: __init__.py  executor.py  executor_definition.py
libraries/dagster-async/dagster_async_tests/: conftest.py  test_assets.py  test_async_executor_performance.py  test_basic.py  test_compute.py  test_compute_generator.py  test_concurrency_limit.py  test_dynamic_async_executor.py  test_execute_step.py  test_graph_shapes_async_executor.py  test_hooks.py  test_nested_graph.py  test_reexecution_async_executor.py
libraries/dagster-chroma/: pyproject.toml
libraries/dagster-chroma/dagster_chroma/: __init__.py  config.py  resource.py
libraries/dagster-dataform/: README.md  pyproject.toml
libraries/dagster-dataform/dagster_dataform/: __init__.py  dataform_orchestration_schedule.py  dataform_polling_sensor.py  resources.py  utils.py
libraries/dagster-dataform/dagster_dataform_tests/: conftest.py  test_dataform_orchestration_schedule.py  test_dataform_polling_sensor.py  test_resources.py
libraries/dagster-datahub/: README.md  pyproject.toml
libraries/dagster-datahub/dagster_datahub/: __init__.py
libraries/dagster-datahub/dagster_datahub_tests/: test_smoke.py  test_version.py
libraries/dagster-ducklake/: CHANGELOG.md  pyproject.toml
libraries/dagster-ducklake/dagster_ducklake/: Makefile  __init__.py  ducklake.py
libraries/dagster-ducklake/dagster_ducklake_tests/: test_ducklake.py
libraries/dagster-elasticsearch/: CHANGELOG.md  README.md  pyproject.toml
libraries/dagster-elasticsearch/dagster_elasticsearch/: __init__.py  checks.py  config.py  errors.py  io_manager.py  resource.py
libraries/dagster-elasticsearch/dagster_elasticsearch_tests/: conftest.py  test_checks.py  test_io_manager.py  test_resource.py  test_unit.py  test_version.py
libraries/dagster-evidence/: CLAUDE.md  Makefile  README.md  pyproject.toml  questions.txt
libraries/dagster-evidence/dagster_evidence/: __init__.py  resource.py
libraries/dagster-evidence/dagster_evidence_tests/: conftest.py  test_component.py  test_deployments.py  test_evidence_resource.py  test_projects.py  test_sources.py  test_sql_parser.py  test_translator.py  test_version.py
libraries/dagster-evidence/docs/: component-architecture.excalidraw
libraries/dagster-gemini/: pyproject.toml
libraries/dagster-gemini/dagster_gemini/: __init__.py  resource.py
libraries/dagster-hex/: CHANGELOG.md  pyproject.toml
libraries/dagster-hex/dagster_hex/: __init__.py  asset_decorator.py  assets.py  resources.py
libraries/dagster-hex/dagster_hex_tests/: test_hex.py
libraries/dagster-hf-datasets/: README.md  pyproject.toml
libraries/dagster-hf-datasets/dagster_hf_datasets/: __init__.py
libraries/dagster-hf-datasets/dagster_hf_datasets_tests/: conftest.py  test_dataset_asset.py  test_dataset_card.py  test_dataset_metadata.py  test_huggingface_resource.py  test_io_manager.py  test_multi_asset.py  test_partition_mapping.py  test_publisher.py
libraries/dagster-hf-datasets/docs/: API.md  Usage.md
libraries/dagster-hf-datasets/examples/: basic_asset.py  basic_asset_pipeline.py  dataset_pipeline.py  multi_asset.py  multi_asset_pipeline.py  web_ui.py
libraries/dagster-modal/: Makefile  pyproject.toml
libraries/dagster-modal/dagster_modal/: __init__.py  resources.py
libraries/dagster-modal/dagster_modal_tests/: test_modal_client.py
libraries/dagster-notdiamond/: README.md  pyproject.toml
libraries/dagster-notdiamond/dagster_notdiamond/: __init__.py  resources.py
libraries/dagster-notdiamond/dagster_notdiamond_tests/: test_resources.py
libraries/dagster-obstore/: Makefile  README.md  pyproject.toml
libraries/dagster-obstore/dagster_obstore/: __init__.py
libraries/dagster-obstore/dagster_obstore_tests/: conftest.py
libraries/dagster-openlineage/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libraries/dagster-openlineage/dagster_openlineage/: __init__.py  adapter.py  compat.py  cursor.py  emitter.py  facets.py  listener.py  naming.py  sensor.py  storage.py  utils.py
libraries/dagster-openlineage/dagster_openlineage_tests/: __init__.py  conftest.py  fakes.py  test_adapter_asset.py  test_adapter_client.py  test_adapter_pipeline.py  test_adapter_step.py  test_e2e_asset_emission.py  test_e2e_pipes.py  test_e2e_subprocess.py  test_emitter.py  test_facet_builders.py  test_multi_tenant.py  test_naming.py  test_sensor_cursor.py  test_sensor_cursor_assets.py  test_sensor_evaluation.py  test_storage_wrapper.py  test_utils.py
libraries/dagster-polars/: CHANGELOG.md  pyproject.toml
libraries/dagster-polars/dagster_polars/: patito.py
libraries/dagster-polars/dagster_polars_tests/: test_no_shadow_warning.py  test_polars_delta.py  test_s3_parquet.py  test_storage_options_remap.py  (+2 more)
libraries/dagster-qdrant/: pyproject.toml
libraries/dagster-salesforce/: pyproject.toml
libraries/dagster-sftp/: Makefile  pyproject.toml
libraries/dagster-sharepoint/: README.md  pyproject.toml
libraries/dagster-teradata/: Makefile  README.md  pyproject.toml
libraries/dagster-vertexai/: README.md  pyproject.toml
libraries/dagster-xquik/: README.md  pyproject.toml
(+255 files in other folders)
