[project]
name = "example-integration"
description = "<insert description here>"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "ty==0.0.37",
]

# ty configuration is inherited from the repository root pyproject.toml.

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["example_integration"]

[tool.setuptools.dynamic]
version = {attr = "example_integration.__version__"}
