[project]
name = "dagster-adbc"
description = "Dagster integration with ADBC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adbc-driver-manager>=1.11.0",
    "dagster>=1.13.0",
    "pyarrow>=23.0.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "dbc>=0.2.0",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_adbc"]

[tool.setuptools.dynamic]
version = {attr = "dagster_adbc.__version__"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
