[project]
name = "dagster-adbc"
description = "Dagster integration with ADBC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adbc-driver-manager>=1.11.0",
    "dagster>=1.13.0",
    "pyarrow>=23.0.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "dbc>=0.2.0",
    "ty==0.0.37",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_adbc"]

[tool.setuptools.dynamic]
version = {attr = "dagster_adbc.__version__"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
