[project]
name = "dagster-apprise"
description = "Get notified when your Dagster runs succeed, fail, or change status across 70+ services including Slack, Discord, Pushover, Telegram, and more."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.0",
    "apprise>=1.6.0",
    "pydantic>=2.6",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ty==0.0.37",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_apprise"]

[tool.setuptools.dynamic]
version = {attr = "dagster_apprise.__version__"}

[project.entry-points."dagster_dg_cli.registry_modules"]
dagster_apprise = "dagster_apprise.components"

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
