[project]
name = "dagster-async-executor"
description = "Async Support for Dagster"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "anyio>=4.12.0",
    "dagster>=1.12.2",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ty==0.0.37",
    "pytest",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dagster_async_executor*"]
exclude = ["dagster_async_executor_tests*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "dagster_async_executor.__version__"}

[tool.ruff]
target-version = "py310"

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
