[project]
name = "dagster-chroma"
description = "Dagster integration with chroma"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.19.2", # onnxruntime 1.23.2+ supports python 3.13
    "dagster>=1.8.0",
    "chromadb>=0.6.1",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ty==0.0.37",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_chroma"]

[tool.setuptools.dynamic]
version = {attr = "dagster_chroma.__version__"}

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
