[project]
name = "dagster-elasticsearch"
description = "Dagster integration for Elasticsearch — resource and IO manager with optional alias rollover"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.13.0",
    # Loose pin: Elasticsearch 8, 9, and 10 use the same bulk + alias APIs
    # we exercise. Pin a specific major in your own project to match your
    # server — elasticsearch-py refuses cross-major (e.g. v9 client + v8
    # server).
    "elasticsearch>=8.10,<11",
]
dynamic = ["version"]

[project.optional-dependencies]
# DataFrame / table format support.
pandas = ["pandas>=2.0"]
polars = ["polars>=1.0"]
arrow = ["pyarrow>=14"]

[dependency-groups]
dev = [
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=14",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "testcontainers>=4.4.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_elasticsearch"]

[tool.setuptools.dynamic]
version = {attr = "dagster_elasticsearch.__version__"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
