[project]
name = "dagster-elasticsearch"
description = "Dagster integration for Elasticsearch. Resource and IO manager with optional alias rollover."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.13.0",
    # CI runs against an Elasticsearch 8 server; elasticsearch-py refuses
    # cross-major clients (e.g. v9 client + v8 server).
    "elasticsearch>=8.10,<9",
]
dynamic = ["version"]

[project.optional-dependencies]
# DataFrame / table format support.
pandas = ["pandas>=2.0"]
polars = ["polars>=1.0"]
arrow = ["pyarrow>=14"]

[dependency-groups]
dev = [
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=14",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty==0.0.37",
    "testcontainers>=4.4.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_elasticsearch"]

[tool.setuptools.dynamic]
version = {attr = "dagster_elasticsearch.__version__"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
