[project]
name = "dagster-hex"
version = "0.1.4"
description = "Dagster integration with Hex"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.3",
    "requests>=2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "types-requests",
    "pytest-mock",
    "requests-mock",
]
