[project]
name = "dagster-hex"
description = "Dagster integration with Hex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.3",
    "requests>=2",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-mock",
    "ty==0.0.37",
    "requests-mock",
    "ruff",
    "types-requests",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hex"]

[tool.setuptools.dynamic]
version = {attr = "dagster_hex.__version__"}

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
