[project]
name = "dagster-hex"
description = "Dagster integration with Hex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.3",
    "requests>=2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ty==0.0.37",
    "requests-mock",
    "ruff",
    "types-requests",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hex"]

[tool.setuptools.dynamic]
version = {attr = "dagster_hex.__version__"}
