[project]
name = "dagster_hf_datasets"
description = "Dagster Integration with HF Datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.0",
    "huggingface_hub>=1.0.0",
    "datasets"
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_hf_datasets"]

[tool.setuptools.dynamic]
version = {attr = "dagster_hf_datasets.__version__"}
