[project]
name = "dagster-notdiamond"
description = "Dagster integration with Not Diamond"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dagster>=1.8.0",
    "notdiamond",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "dagster-openai",
    "ruff",
    "pytest",
    "dagster-webserver",
    "ty==0.0.37",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_notdiamond"]

[tool.setuptools.dynamic]
version = {attr = "dagster_notdiamond.__version__"}

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
