[project]
name = "dagster-notdiamond"
description = "Dagster integration with Not Diamond"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dagster>=1.8.0",
    "notdiamond",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "dagster-openai",
    "ruff",
    "pytest",
    "dagster-webserver",
    "ty==0.0.37",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_notdiamond"]

[tool.setuptools.dynamic]
version = {attr = "dagster_notdiamond.__version__"}
