[project]
name = "dagster-openlineage"
description = "Dagster integration for OpenLineage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.11.6",
    "openlineage-python>=1.7.0",
    "packaging",
    "cattrs",
    "pyyaml",
]

dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ty==0.0.37",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_openlineage"]

[tool.setuptools.dynamic]
version = { attr = "dagster_openlineage.version.__version__" }

[project.entry-points]
"dagster_dg.library" = { dagster_openlineage = "dagster_openlineage" }
"dagster_dg.plugin" = { dagster_openlineage = "dagster_openlineage" }

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
