[project]
name = "dagster-polars"
authors = [
    {name = "Daniel Gafni", email = "danielgafni16@gmail.com"},
]
description = "Dagster integration library for Polars"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster",
    "polars>=1.0.0",
    "pyarrow>=8.0.0",
    "typing-extensions>=4.7.0",
    "universal-pathlib>=0.1.4,<0.3",
]
dynamic = ["version"]

[project.optional-dependencies]
deltalake = ["deltalake>=0.25.0,<1.2"]
gcp = ["dagster-gcp>=0.19.5"]
patito = [
    "patito>=0.8.3",
]

[project.urls]
Repository = "https://github.com/dagster-io/community-integrations/tree/main/libraries/dagster-polars"

[dependency-groups]
dev = [
    "deepdiff>=6.3.0",
    "hypothesis[zoneinfo]>=6.89.0",
    "moto[server]>=5.0.0",
    "ruff",
    "polars>=1.31.0",
    "pytest>=8",
    "pytest-cases>=3.6.14",
    "pytest-mock",
    "ty==0.0.37",
    "s3fs>=2024.0.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dagster_polars*"]
exclude = ["dagster_polars_tests*"]
namespaces = false

[tool.setuptools.package-data]
dagster_polars = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "dagster_polars.version.__version__"}

[tool.ty.src]
include = ["dagster_polars"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
