[project]
name = "dagster-salesforce"
description = "Dagster integration library for Salesforce"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "simple-salesforce>=1.12.9",
]
dynamic = ["version"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
